tests/typing/bad/extra-new3.scala
class A {
    def m() { var b : Nothing = new Nothing() }
}
object Main { def main(args: Array[String]) { } }
